--- a/FE/package.json
+++ b/FE/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
   },
